# shape_detection

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  TECHNICAL_DOCS.md  download_libtorch.sh  install_poetry.sh  main.cpp  pyproject.toml  setup.sh
src/shape_recognition/: __init__.py  test_setup.py  train_model.py
